tests/lang/parse-fail-regression-20060610.err.exp
error: undefined variable 'gcc'

       at «stdin»:8:12:

            7|
            8|   body = ({
             |            ^
            9|     inherit gcc;
